começo do rodape

--- a/css/tela10.css
+++ b/css/tela10.css
@@ -1,2 +1,18 @@
 
+.rodape {
+    background-color: rgb(41, 41, 41);
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    color: white;
+}
+
+.container {
+    max-width: 400px;
+    max-height: 852px;
+}
+
 
