--- a/css/tela11.css
+++ b/css/tela11.css
@@ -6,7 +6,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+
     color: rgb(0, 0, 0);
 }
 
@@ -17,7 +17,7 @@
 
 .rodape button {
     background-color: rgb(41, 41, 41);
-    
+    style    
 }
 
 .rodape img {
