--- a/css/tela2.css
+++ b/css/tela2.css
@@ -1,2 +1,12 @@
+body {
+    background-color: rgb(85, 40, 40);
+}
 
-
+.tela {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+}
