--- a/css/tela10.css
+++ b/css/tela10.css
@@ -13,12 +13,6 @@ body {
     align-items: center;
     height: 100vh;
 }
-.container {
-    text-align: center;
-    max-width: 400px;
-    padding: 20px;
-}
-
 
 .rodape {
     background-color: rgb(41, 41, 41);
@@ -39,5 +33,18 @@ body {
 
 .rodape img {
     max-width: 30px;
-    
+}
+
+nav {
+    top: 0;
+    padding: 10px 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 300px;
+}
+
+.info {
+    margin-right: 250px;
+    font-size: 20px;
+    font-family: Arial, sans-serif;
 }
