--- a/css/tela11.css
+++ b/css/tela11.css
@@ -5,9 +5,6 @@
     font-family: Arial, sans-serif;
 }
 
-
-
-
 body {
     background-color: rgb(41, 41, 41);
     color: white; 
@@ -16,6 +13,7 @@ body {
     align-items: center;
     height: 100vh;
 }
+
 .rodape {
     background-color: rgb(41, 41, 41);
     text-align: center;
@@ -23,21 +21,17 @@ body {
     position: fixed;
     bottom: 0;
     width: 100%;
-
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     color: rgb(0, 0, 0);
 }
 
 
 .rodape button {
-    background-color: rgba(41, 41, 41, 0);
-    
     background-color: rgb(41, 41, 41);
-    style    
 }
 
 .rodape img {
     max-width: 30px;
-    
 }
 
 .container {
