--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
     margin: 20px;
-    background-color: #f0f0f0;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
-    background-color: white;
+    background-color: rgb(182, 85, 85);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
