--- a/css/tela8.css
+++ b/css/tela8.css
@@ -6,7 +6,11 @@ header > .menu-iphone {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 20px;
+    height: 11px;
+}
+
+.clock {
+    color: white;
 }
 
 nav ul {
@@ -20,4 +24,15 @@ nav ul li {
 
 nav ul img {
     height: 20px;
+}
+
+.top {
+    display: flex;
+}
+
+.foto-perfil img {
+    height: 75px;
+    width: 75px;
+    border-radius: 50px;
+    justify-content: flex-end;
 }
