--- a/css/tela4.css
+++ b/css/tela4.css
@@ -1,2 +1,32 @@
+.registro {
+    padding-top: 100px ;
+    text-align: center;
+    color: whitesmoke;
+}
 
+.botaoFace {
+    text-align: center;
+}
 
+.botaoGoogle {
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+    padding-top: 190px;
+    color: whitesmoke;
+}
+
+img {
+    width: 30px;
+}
+
+fieldset {
+    border: none;
+    text-align: center;
+}
+
+body {
+    background-color: #414141;
+}
