--- a/css/tela10.css
+++ b/css/tela10.css
@@ -48,3 +48,9 @@ nav {
     font-size: 20px;
     font-family: Arial, sans-serif;
 }
+
+h5 {
+    margin-left: 40px;
+    margin-top: 10px;
+    font-weight: 200;
+}
