--- a/css/tela9.css
+++ b/css/tela9.css
@@ -21,6 +21,31 @@ body {
     padding: 20px;
 }
 
+nav {
+    top: 0;
+    padding: 10px 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 300px;
+}
+
+.info {
+    margin-right: 250px;
+    font-size: 20px;
+    font-family: Arial, sans-serif;
+    margin-top: 30px;
+    margin-left: 50px;
+    text-align: left;
+    
+}
+
+
+h5 {
+    margin-left: 40px;
+    margin-top: 10px;
+    font-weight: 200;
+    width: 100%;
+}
 
 .rodape {
     background-color: rgb(41, 41, 41);
@@ -42,4 +67,10 @@ body {
 .rodape img {
     max-width: 30px;
     
+}
+
+.info .perfil {
+    text-decoration: none;
+    color: white;
+    margin-top: 30px;
 }
