--- a/css/tela11.css
+++ b/css/tela11.css
@@ -78,3 +78,9 @@ h1 {
     line-height: 1.5;
     color: #aaa; 
 }
+
+img {
+    margin-left:40px;
+    margin-right: 30px;
+    justify-content: center;
+}
