--- a/css/tela9.css
+++ b/css/tela9.css
@@ -56,6 +56,7 @@ h5 {
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     color: rgb(0, 0, 0);
+    
 }
 
 
@@ -73,4 +74,11 @@ h5 {
     text-decoration: none;
     color: white;
     margin-top: 30px;
+    
+}
+
+img {
+    margin-left:40px;
+    margin-right: 30px;
+    justify-content: center;
 }
