--- a/css/tela11.css
+++ b/css/tela11.css
@@ -12,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
 }
 
 .rodape {
@@ -38,6 +39,7 @@ body {
     text-align: center;
     max-width: 400px;
     padding: 20px;
+    margin-bottom: 60px
 }
 
 
@@ -47,6 +49,7 @@ body {
 
 .header .back-button {
     margin-right: 300px;
+    margin-bottom: 30px;
 }
 
 .back-button {
@@ -65,6 +68,7 @@ h1 {
     max-width: 300px;
     height: auto;
     margin: 20px 0;
+    margin-bottom: 30px;
 }
 
 
