--- a/css/tela3.css
+++ b/css/tela3.css
@@ -1,67 +1,93 @@
 body {
+    margin: 0;
+    padding: 0;
     background-color: rgb(6, 54, 56);
+    font-family: serif;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
 }
+
 
 .tela {
-    color: white;
-   
-    position: absolute;
-    top: 30%;
-    left: 46%;
-    transform: translate(-40%, -40%);
-    font-size: 30px;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
 }
+
 
 .layout {
-    font-size: 8px;
-    color: white;
-    position: absolute;
-    top: 60%;
-    left: 38%
+    font-size: 0.75rem;
+    text-align: center;
+    margin-bottom: 2rem;
 }
-
-.layout h1 {
-    font-family:serif;
-}
-
 
 
 .login {
-position: absolute;
-top: 70%;
-left: 35%;
-}
-
-.login a {
-    color: rgb(238, 238, 238);
-    font-family:serif;
-}
-
-.login button {
-    background-color: black;
-    border-radius: 10px;
-    font-size: 25px;
-    width: 350px; 
-    border-color: transparent;
-
+    width: 90%;
+    max-width: 350px;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 .login-2 {
-    position: absolute;
-    top: 80%;
-    left: 35%; 
+    width: 90%;
+    max-width: 350px;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
+
 .login-2 a {
-    color: white;
-    font-family:serif;
+    color: rgb(238, 238, 238);
+    text-decoration: none;
 }
+
+.login button{
+    width: 100%;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    padding: 0.75rem;
+    cursor: pointer;
+    
+}
+.login-2 button {
+    width: 100%;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    padding: 0.75rem;
+    cursor: pointer;
+}
+
+
+.login button {
+    background-color: black;
+    border: none;
+    color: white;
+}
+
 
 .login-2 button {
     background-color: transparent;
-    text-align:center;
-    width: 350px;
-    font-size:25px;
-    border-radius: 10px;
-    border-color:white;
+    border: 2px solid white;
+    color: white;
 }
+
+
+    .tela {
+        font-size: 1.5rem;
+    }
+
+    .layout {
+        font-size: 0.65rem;
+    }
+
+    .login button{
+        font-size: 1rem;
+    }
+    .login-2 button {
+        font-size: 1rem;
+    }
