--- a/css/tela8.css
+++ b/css/tela8.css
@@ -1,5 +1,18 @@
 * {
-    background-color: #322f35 ;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    background-color: rgb(41, 41, 41);
+    color: white; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
 }
 
 header > .menu-iphone {
@@ -35,4 +48,37 @@ nav ul img {
     width: 75px;
     border-radius: 50px;
     justify-content: flex-end;
+}
+
+.rodape {
+    background-color: rgb(41, 41, 41);
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    color: rgb(0, 0, 0);
+}
+
+
+.rodape button {
+    background-color: rgb(41, 41, 41);
+}
+
+.rodape img {
+    max-width: 30px;
+}
+
+.container {
+    text-align: center;
+    max-width: 400px;
+    padding: 20px;
+    margin-bottom: 60px
+}
+
+img {
+    margin-left:40px;
+    margin-right: 30px;
+    justify-content: center;
 }
