--- a/css/tela2.css
+++ b/css/tela2.css
@@ -25,3 +25,9 @@ body {
     max-width: 600px;
     background-color: transparent;
 }
+
+.tela h1 {
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
