--- a/css/tela8.css
+++ b/css/tela8.css
@@ -5,51 +5,40 @@
     font-family: Arial, sans-serif;
 }
 
+
 body {
     background-color: rgb(41, 41, 41);
-    color: white; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-    
-}
-
-header > .menu-iphone {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 11px;
-}
-
-.clock {
-    color: white;
-}
-
-nav ul {
-    list-style: none;
-    justify-content: flex-end;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul img {
-    height: 20px;
 }
 
 .top {
     display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+
+}
+.text-oi {
+    align-items: center;
+    justify-content: center;
+    margin: auto 0 auto 10%;
 }
 
-.foto-perfil img {
-    height: 75px;
-    width: 75px;
-    border-radius: 50px;
-    justify-content: flex-end;
+.text-oi h1 {
+    color: white;
 }
 
+.pfp {
+    margin-right: 5%;
+}
+
+.pfp img {
+    border-radius: 99px;
+    height: 100px;
+    width: 100px;
+}
+
+
+/* Barra de navegação */
 .rodape {
     background-color: rgb(41, 41, 41);
     text-align: center;
@@ -68,16 +57,6 @@ nav ul img {
 
 .rodape img {
     max-width: 30px;
-}
-
-.container {
-    text-align: center;
-    max-width: 400px;
-    padding: 20px;
-    margin-bottom: 60px
-}
-
-img {
     margin-left:40px;
     margin-right: 30px;
     justify-content: center;
