--- a/css/tela8.css
+++ b/css/tela8.css
@@ -70,14 +70,14 @@ body {
 }
 
 img {
-    margin-left:40px;
+    margin-left:30px;
     margin-right: 30px;
     justify-content: center;
 }
 
 
 footer.rodape {
-    width: 1000px;
+    width: 100%;
 }
 
 a {
