--- a/css/tela8.css
+++ b/css/tela8.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+    color: white;
 }
 
 
@@ -23,10 +24,6 @@ body {
     margin: auto 0 auto 10%;
 }
 
-.text-oi h1 {
-    color: white;
-}
-
 .pfp {
     margin-right: 5%;
 }
@@ -35,6 +32,14 @@ body {
     border-radius: 99px;
     height: 100px;
     width: 100px;
+}
+
+.searchbar {
+    justify-content: center;
+    padding: 13px 14px;
+    margin-top: 30px;
+    border: 1px solid #FFFFFF;
+    border-radius: 30px;
 }
 
 
