--- a/css/tela6.css
+++ b/css/tela6.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #414141;
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    background-color: white;
+    background-color: #242323;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -19,15 +19,35 @@ body {
 }
 
 h1 {
-    color: #333;
+    color: #fffefe;
     margin-bottom: 20px;
 }
 
 h2 {
-    color: #555;
+    color: #ffffff;
     font-size: 16px;
     margin-bottom: 15px;
     text-align: left;
+}
+
+.selecione-endereco {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.address-input label {
+    display: block;
+    margin-bottom: 5px;
+    color: #f8f5f5;
+    font-weight: bold;
+}
+
+.address-input input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #fffcfc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .save-as-section, .others-section {
@@ -41,7 +61,7 @@ h2 {
 }
 
 .location-btn {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 10px 20px;
@@ -52,11 +72,11 @@ h2 {
 }
 
 .location-btn:hover {
-    background-color: #e0e0e0;
+    background-color: #fffefe;
 }
 
 .save-btn {
-    background-color: #4CAF50;
+    background-color: #940000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -68,6 +88,15 @@ h2 {
 }
 
 .save-btn:hover {
-    background-color: #45a049;
+    background-color: #940000;
 }
 
+img {
+    width: 40px;
+}
+
+.butao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
