--- a/css/tela8.css
+++ b/css/tela8.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
 }
 
+/* HEADER */
 .top {
     display: flex;
     justify-content: space-between;
@@ -30,33 +31,46 @@ body {
 
 .pfp img {
     border-radius: 99px;
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    width: 90px;
 }
 
 .searchbar {
-    justify-content: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     padding: 13px 14px;
     margin-top: 30px;
-    border: 1px solid #FFFFFF;
+    border: 2px solid #FFFFFF;
     border-radius: 30px;
 }
 
-.searchbar
+.searchbar span {
+    color: #c4c4c4b4;
+}
+
+.searchbar img {
+    height: 25px;
+    width: 25px;
+    opacity: calc(0.7);
+    
+}
+
+/* MAIN */
 
 
 /* Barra de navegação */
 .rodape {
     background-color: rgb(41, 41, 41);
     text-align: center;
+    margin-left: 0%;
     padding: 10px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     color: rgb(0, 0, 0);
-    width: 3000px;
-
+    
 }
 
 
