--- a/css/tela3.css
+++ b/css/tela3.css
@@ -31,6 +31,7 @@ body {
     max-width: 350px;
     margin-bottom: 1rem;
     text-align: center;
+    margin-left: 30px;
 }
 
 .login-2 {
@@ -38,6 +39,7 @@ body {
     max-width: 350px;
     margin-bottom: 1rem;
     text-align: center;
+    margin-left: 30px;
 }
 
 
