--- a/css/tela3.css
+++ b/css/tela3.css
@@ -16,6 +16,7 @@ body {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 1rem;
+    margin-left: 20px;
 }
 
 
@@ -23,6 +24,7 @@ body {
     font-size: 0.75rem;
     text-align: center;
     margin-bottom: 2rem;
+    margin-left: 30px;
 }
 
 
