--- a/css/tela2.css
+++ b/css/tela2.css
@@ -14,6 +14,7 @@ background-color: rgb(85, 40, 40);
     min-height: 100vh;
     padding: 1rem;
     text-align: center;
+    text-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);;
 }
 
 .tela {
