--- a/css/tela1.css
+++ b/css/tela1.css
@@ -1,4 +1,26 @@
 
-.main {
-    background-color: rgb(55, 104, 209);
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: black;
+    overflow: hidden;
+}
+
+.splash-screen {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, red);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 2em;
+    animation: fadeOut 3s forwards 2s;
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; visibility: hidden; }
 }
