--- a/css/tela8.css
+++ b/css/tela8.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: white;
 }
 
@@ -57,7 +57,14 @@ body {
 }
 
 /* MAIN */
+.ult-atividade span {
+    font-size: larger;
+    font-weight: lighter;
+}
 
+.ult-atividade {
+    margin-top: 10%;
+}
 
 /* Barra de navegação */
 .rodape {
@@ -104,3 +111,4 @@ footer.rodape {
 a {
     text-decoration: none;
 }
+
