--- a/css/tela8.css
+++ b/css/tela8.css
@@ -66,6 +66,10 @@ body {
     margin-top: 10%;
 }
 
+.card-atividade {
+    display: flex;
+}
+
 /* Barra de navegação */
 .rodape {
     background-color: rgb(41, 41, 41);
