--- a/css/tela1.css
+++ b/css/tela1.css
@@ -11,7 +11,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: linear-gradient(black, red);
+    background: linear-gradient(rgb(189, 78, 78), rgb(85, 40, 40));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,4 +23,21 @@ body {
 @keyframes fadeOut {
     0% { opacity: 1; }
     100% { opacity: 0; visibility: hidden; }
+}
+
+.loader {
+    width: 80px;
+    height: 80px;
+    border: 2px solid rgb(255, 255, 255);
+    border-top-color: rgb(206, 94, 94);
+    border-radius: 50%;
+    animation: rotate ease 1s infinite;
+    bottom: 2;
+    position: absolute;
+}
+
+@keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
 }
