--- a/css/tela3.css
+++ b/css/tela3.css
@@ -96,3 +96,8 @@ body {
     .login-2 button {
         font-size: 1rem;
     }
+
+    a {
+        text-decoration: none;
+        color: white;
+    }
