--- a/css/tela5.css
+++ b/css/tela5.css
@@ -8,7 +8,6 @@
     background-color: blue;
     color: whitesmoke;
     
-    
 }
 
 .botao-branco {
@@ -38,5 +37,6 @@ body {
     background-color: #414141;
 }
 
-
-
+.botao-branco {
+    margin-bottom: 10px;
+}
