--- a/css/tela8.css
+++ b/css/tela8.css
@@ -62,12 +62,27 @@ body {
     font-weight: lighter;
 }
 
+
 .ult-atividade {
     margin-top: 10%;
+    text-align: center;
 }
 
 .card-atividade {
     display: flex;
+}
+
+.card-atividade img {
+    margin: 0px;
+    height: 60px;
+    width: 60px;
+    background-color: #d9d9d9;
+    padding: 5px;
+    border-radius: 80px;
+}
+
+.card-atividade a {
+    
 }
 
 /* Barra de navegação */
