--- a/css/tela8.css
+++ b/css/tela8.css
@@ -70,20 +70,49 @@ body {
 
 .card-atividade {
     display: flex;
+    margin-top: 5%;
+    border: 1px solid;
+    border-radius: 40px;
 }
 
-.card-atividade img {
-    margin: 0px;
-    height: 60px;
-    width: 60px;
+.card-img {
+}
+
+.card-img img {
+    margin: 0 auto;
+    height: 100%;
+    width: 70px;
     background-color: #d9d9d9;
     padding: 5px;
-    border-radius: 80px;
+    border-radius: 50px;
 }
 
-.card-atividade a {
-    
+.card-text {
+    margin-left: 9%
 }
+.card-text a {
+    font-size: large;
+    font-weight: 300;      
+}
+
+.card-endereco {
+    line-height: 15px;
+    text-align: center;
+}
+
+.card-endereco span {
+    font-size: small;
+    font-weight: 200;
+}
+
+.servicos-titulo {
+    text-align: center;
+}
+
+.servicos-cards {
+    display: flex;
+}
+
 
 /* Barra de navegação */
 .rodape {
@@ -96,7 +125,6 @@ body {
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     color: rgb(0, 0, 0);
-    
 }
 
 
@@ -109,14 +137,7 @@ body {
    
 }
 
-.container {
-    text-align: center;
-    max-width: 400px;
-    padding: 20px;
-    margin-bottom: 60px
-}
-
-img {
+footer img {
     margin-left: 30px;
     margin-right: 30px;
     justify-content: center;
@@ -127,6 +148,6 @@ footer.rodape {
     width: 100%;
 }
 
-a {
+footer a {
     text-decoration: none;
 }
