--- a/css/tela10.css
+++ b/css/tela10.css
@@ -52,21 +52,24 @@ nav {
     
 }
 
+.info {
+    width: 100%;
+}
+
 h5 {
-    margin-left: 40px;
     margin-top: 10px;
     font-weight: 200;
-    width: 300px;
-    
+    width: 100%;
+    text-align: center;
 }
 
 hr {
     color: white;
     opacity: 60%;
-    margin-left: 30px;
-    width: 330px;
+    margin-right: 30px;
+    width: 100%;
     margin-top: 10px;
-    
+    text-align: center;
 }
 
 img {
@@ -77,4 +80,60 @@ img {
 
 a {
     text-decoration: none;
+
 }
+
+    
+    @media(max-height: 720px){
+        nav img {
+            margin-top: 80px;
+        }
+    }
+
+    @media(min-width: 768px) and (max-width: 1600px) {
+        nav img {
+            width: 200px;
+            height: 200px;
+        }
+        h3 {
+            font-size: 40px;
+        }
+        h5 {
+            font-size: 30px;
+        }
+        .rodape {
+            padding: 30px;
+        }
+        .rodape a img{
+            height: 60px;
+            max-width: 500px;
+            width: 60px;
+        }
+    }
+       
+        
+    @media(max-height: 800px) {
+        nav h3 {
+            font-size: 20px;
+        }
+        nav img {
+            height: 100px;
+            width: 100px;
+            margin-top: 210px;
+        }
+        .info h3 {
+            font-size: 20px;
+        }
+        .info h5 {
+            font-size: 15px;
+        }
+        .rodape a img {
+            height: 30px;
+            width: 30px;
+        }
+
+        .rodape {
+            padding: 15px;
+        }
+    }
+
