--- a/css/tela8.css
+++ b/css/tela8.css
@@ -20,6 +20,7 @@ body {
     padding-top: 50px;
 
 }
+
 .text-oi {
     align-items: center;
     justify-content: center;
@@ -54,7 +55,7 @@ body {
     height: 25px;
     width: 25px;
     opacity: calc(0.7);
-    
+
 }
 
 /* MAIN */
@@ -77,8 +78,7 @@ body {
     border-radius: 40px;
 }
 
-.card-img {
-}
+.card-img {}
 
 .card-img img {
     margin: 0 auto;
@@ -92,9 +92,10 @@ body {
 .card-text {
     margin-left: 9%
 }
+
 .card-text a {
     font-size: large;
-    font-weight: 300;      
+    font-weight: 300;
 }
 
 .card-endereco {
@@ -136,7 +137,7 @@ body {
 
 .rodape img {
     max-width: 30px;
-   
+
 }
 
 footer img {
@@ -153,3 +154,4 @@ footer.rodape {
 footer a {
     text-decoration: none;
 }
+
