--- a/css/tela7.css
+++ b/css/tela7.css
@@ -44,13 +44,15 @@ iframe {
 }
 
 .pedidos img {
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
+  
 }
 
 .usuario {
   flex: 1;
-  margin-left: 10px;
+  margin-right: 90px;
+  ;
 }
 
 .nome {
