--- a/css/tela6.css
+++ b/css/tela6.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #414141;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,6 @@ h1 {
     color: #fffefe;
     margin-bottom: 20px;
     font-size: 35px
-   
     
 }
 
@@ -36,6 +35,7 @@ h2 {
     font-size: 16px;
     margin-bottom: 15px;
     text-align: left;
+    margin-top: 10px;
 }
 
 .selecione-endereco {
