--- a/css/tela8.css
+++ b/css/tela8.css
@@ -1,3 +1,4 @@
+/* RESET BÁSICO */
 * {
     margin: 0;
     padding: 0;
@@ -6,29 +7,24 @@
     color: white;
 }
 
-
 body {
     background-color: rgb(41, 41, 41);
     height: 100vh;
 }
 
-/* HEADER */
 
+/* HEADER */
 .top {
     display: flex;
     justify-content: space-between;
     padding-top: 50px;
-
 }
 
 .text-oi {
+    display: flex;
     align-items: center;
     justify-content: center;
     margin: auto 0 auto 10%;
-}
-
-.pfp {
-    margin-right: 5%;
 }
 
 .pfp img {
@@ -36,6 +32,7 @@ body {
     height: 90px;
     width: 90px;
 }
+
 
 .searchbar {
     display: flex;
@@ -54,28 +51,25 @@ body {
 .searchbar img {
     height: 25px;
     width: 25px;
-    opacity: calc(0.7);
-
+    opacity: 0.7;
 }
-
-/* MAIN */
-
-.ult-atividade span {
-    font-size: larger;
-    font-weight: lighter;
-}
-
 
 .ult-atividade {
     margin-top: 10%;
     text-align: center;
 }
 
+.ult-atividade span {
+    font-size: larger;
+    font-weight: lighter;
+}
+
 .card-atividade {
     display: flex;
-    margin-top: 5%;
+    margin: 5% auto;
     border: 1px solid;
     border-radius: 40px;
+    max-width: 90%;
 }
 
 .card-img img {
@@ -88,17 +82,17 @@ body {
 }
 
 .card-text {
-    margin-left: 9%
+    margin-left: 9%;
 }
 
-.card-text a {
+.card-titulo a {
     font-size: large;
     font-weight: 300;
 }
 
 .card-endereco {
     line-height: 15px;
-    text-align: center;
+    text-align: left;
 }
 
 .card-endereco span {
@@ -106,9 +100,11 @@ body {
     font-weight: 200;
 }
 
+
 .servicos {
     margin-top: 20px;
 }
+
 .servicos-titulo {
     text-align: center;
 }
@@ -117,7 +113,7 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 30px;
-    padding: 0 auto;
+    padding: 0 10%;
     margin-top: 20px;
 }
 
@@ -132,62 +128,91 @@ body {
     margin: 0 auto;
     width: 100px;
     height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .servico-img img {
-    justify-content: center;
     height: 50px;
     width: 50px;
-    margin: 10px 25px;
 }
 
-/* Barra de navegação */
-.rodape {
+
+
+footer.rodape {
     background-color: rgb(41, 41, 41);
     text-align: center;
     position: fixed;
     bottom: 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-    color: rgb(0, 0, 0);
     padding: 8px;
 }
 
-
-.rodape button {
+footer.rodape button {
     background-color: rgb(41, 41, 41);
 }
 
-.rodape img {
+footer.rodape img {
     max-width: 40px;
-}
-
-footer img {
-    margin-left: 30px;
-    margin-right: 30px;
-    justify-content: center;
-}
-
-
-footer.rodape {
-    width: 100%;
+    margin: 0 30px;
 }
 
 footer a {
     text-decoration: none;
+    color: inherit;
 }
 
 
-@media(max-width: 450px) {
-    .rodape img{
+/* RESPONSIVO */
+@media (max-width: 450px) {
+    footer.rodape img {
         max-width: 9%;
     }
-    .rodape {
-        width: 1500px;
-        max-width: 2000px;
+
+    footer.rodape {
+        width: 100%;
     }
 }
 
-@media screen and (min-width : 1024px) {
-    
+@media screen and (min-width: 768px) and (max-width: 819){
+   .card-atividade {
+        width: 300px;
+        margin-left: 30px;
+   }
+}
+
+@media (min-width: 820px) {
+    .card-atividade {
+        width: 400px;
+        height: 100px;
+        margin-left: 30px;
+    }
+    .card-titulo a{
+        font-size: 30px;
+        
+        
+    }
+    .card-titulo {
+        width: 300px;
+        margin-top: 15px;
+    }
+
+    .servicos-titulo {
+        font-size: 40px;
+    }
+    .servico-img {
+        width: 150px;
+        height: 150px;
+
+    }
+    .servico-img img {
+        height: 70px;
+        width: 70px;
+    }
+
+    .servico-text {
+        
+    }
 }
