--- a/css/tela6.css
+++ b/css/tela6.css
@@ -158,3 +158,10 @@ footer a {
 @media screen and (min-width : 1024px) {
     
 }
+
+.mapBox {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+}
