--- a/css/enderecos.css
+++ b/css/enderecos.css
@@ -1,5 +1,11 @@
+* {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    }
+    
     body {
-        background-color: #414141;
+        background-color:rgb(41, 41, 41);
+    
     }
 
     header {
@@ -76,6 +82,9 @@ header {
     border: 1px solid;
     border-radius: 40px;
     max-width: 90%;
+    color: whitesmoke;
+    align-items: center;
+    
 }
 
 .box-busca{ 
@@ -86,7 +95,7 @@ header {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #414141;
+    background-color: rgb(41, 41, 41);
 }
 
 
