--- a/css/tela8.css
+++ b/css/tela8.css
@@ -113,7 +113,7 @@ body {
     display: flex;
     justify-content: space-between;
     gap: 30px;
-    padding: 0 10%;
+    padding: 0;
     margin-top: 20px;
 }
 
