--- a/css/tela8.css
+++ b/css/tela8.css
@@ -212,7 +212,41 @@ footer a {
         width: 70px;
     }
 
-    .servico-text {
-        
+}
+
+@media screen and (min-width: 992px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .top {
+        gap: 30px;
+        margin-left: 100px;
+    }
+    .text-oi {
+        text-align: center;
+        margin: 0 auto;
+    }
+    .pfp img {
+        border-radius: 10px;
+    }
+    .searchbar {
+        height: 100px;
+        width: 700px;
+        margin-right: 100px;
+        margin-bottom: 0;
+    }
+    .searchbar span {
+        font-size: 20px;
+    }
+    .searchbar img {
+        height: 50px;
+        width: 50px;
+        margin-right: 0;
+    }
+
+    .rodape {
+        display: none;
     }
 }
