--- a/css/menuadm.css
+++ b/css/menuadm.css
@@ -13,13 +13,23 @@ body {
 }
 
 .top {
-    background-color: rgb(114, 3, 3);
+    justify-content: center;
+    display: flex;
     text-align: center;
-}
-
-.top h1 {
+    background-color: #ffffff;
+    height: 100px;
+    
+        h1 {
     padding: 30px 10px 10px ;
-    color: #c0c0c0;
+    color: #720303;
+    }
+        img {
+    height: 90px;
+    width: 90px;
+    position: absolute;
+    left: 0;
+    top: 5px;
+    }
 }
 
 footer.rodape {
@@ -31,30 +41,26 @@ footer.rodape {
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     padding: 8px;
-}
-
-footer.rodape button {
+        button {
     background-color: rgb(41, 41, 41);
-}
-
-footer.rodape img {
+    }
+        img {
     max-width: 40px;
     margin: 0 30px;
-}
-
-footer a {
+    }
+        a {
     text-decoration: none;
     color: inherit;
+    }
 }
 
 
 /* RESPONSIVO */
-@media (max-width: 450px) {
-    footer.rodape img {
-        max-width: 9%;
-    }
-
+@media (max-width: 425px) {
     footer.rodape {
         width: 100%;
+            img {
+        max-width: 9%;
+        }
     }
 }
