att tela login funcional

--- a/view/tela2.html
+++ b/view/tela2.html
@@ -32,7 +32,7 @@
     </header>
    
 <div class="loader">
-    <img src="../img/trilho.png">
+    <img src="../assets/img/trilho.png">
 </div>
 
 </body>
