--- a/view/tela3.html
+++ b/view/tela3.html
@@ -29,20 +29,20 @@
         </div>
 
         <div class="layout">
-            <h1>A melhor rota para o seu dia</h1>
+            <h1>A melhor rota para o seu dia!</h1>
         </div>
 
         <div class="logins">
 
             <div class="login">
                 <button>
-                    <a href="tela5.html">Entrar na minha conta</a>
+                    <a href="tela_login.php">Já possui conta? Entrar</a>
                 </button>
             </div>
 
             <div class="login-2">
                 <button>
-                    <a href="tela4.html">Registre-se</a>
+                    <a href="tela_registro.php">Registre-se</a>
                 </button>
 
 
