--- a/css/tela_registro.css
+++ b/css/tela_registro.css
@@ -6,9 +6,8 @@ body {
     color: whitesmoke;
     display: flex;
     flex-direction: column;
-    min-height: 100px;
+    min-height: 100vh;
 }
-
 
 header h1 {
     text-align: center;
@@ -18,7 +17,6 @@ header h1 {
     color: #fff;
     margin-top: 90px;
 }
-
 
 main {
     flex: 1;
@@ -30,16 +28,11 @@ main {
     width: 90%;
 }
 
-
-.registro {
-    text-align: center;
-    padding: 20px 0;
-}
-
 fieldset {
     border: none;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 legend {
@@ -55,14 +48,15 @@ input[type="password"] {
     width: 80%;
     max-width: 350px;
     padding: 12px 15px;
-    margin: 8px 0;
+    margin: 8px auto;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f8f8f8;
     font-size: 1rem;
+    display: block;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
     width: 85%;
     max-width: 380px;
     padding: 12px;
@@ -76,8 +70,11 @@ input[type="submit"] {
     transition: background-color 0.3s;
 }
 
-input[type="submit"]:hover {
-    background-color: crimson;
+.erro {
+    color: crimson;
+    margin-bottom: 15px;
+    font-weight: 500;
+    text-align: center;
 }
 
 .texto-login {
@@ -91,7 +88,6 @@ input[type="submit"]:hover {
     margin-left: 5px;
 }
 
-
 @media (max-width: 600px) {
     header h1 {
         padding-top: 30px;
@@ -102,24 +98,10 @@ input[type="submit"]:hover {
     input[type="email"],
     input[type="tel"],
     input[type="password"],
-    input[type="submit"] {
+    input[type="submit"],
+    .registrar-se button {
         width: 90%;
     }
-}
-
-.registrar-se button {
-    width: 85%;
-    max-width: 380px;
-    padding: 12px;
-    margin-top: 15px;
-    background-color: #940000;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: background-color 0.3s;
-
 }
 
 .registrar-se a{
