--- a/view/tela2.html
+++ b/view/tela2.html
@@ -15,15 +15,7 @@
 </head>
 <body>
 
-    <script >
-
-        setTimeout(function () {
-            
-            window.location.href = "tela3.html"
-        
-        }, 3000);
-
-    </script>
+    <script src="../js/tela2.js" > </script>
 
     <header>
         <div class="tela">
