--- a/view/menuadm.html
+++ b/view/menuadm.html
@@ -59,7 +59,7 @@
     <footer>
 
     </footer>
-    <script src="../js/main.js"></script>
+    <script src="../js/menuadm.js"></script>
 </body>
 
 </html>
