--- a/view/enderecos.html
+++ b/view/enderecos.html
@@ -25,7 +25,7 @@
             <form method="post" action="#">
 
                 <input type="text" class="search-box-input" name="busca" placeholder="Adicione Nova Estação">
-                <button class="search-box-button"><img src="../img/lupa.png"><i class="search-box-icone icon icon-search"></i></button>
+                <button class="search-box-button"><img src="../assets/img/lupa.png"><i class="search-box-icone icon icon-search"></i></button>
             
             </form>
             
@@ -38,7 +38,7 @@
         </div> <!-- ult -atividade -->
         <div class="card-atividade">
             <div class="card-img">
-                <img src="../img/localizacao.png">
+                <img src="../assets/img/localizacao.png">
             </div>
             <div class="card-text">
                 <div class="card-titulo">
@@ -53,7 +53,7 @@
 
         <div class="card-atividade">
             <div class="card-img">
-                <img src="../img/localizacao.png">
+                <img src="../assets/img/localizacao.png">
             </div>
             <div class="card-text">
                 <div class="card-titulo">
@@ -74,15 +74,15 @@
 
 <footer class="rodape">
     <a href="tela8.html">
-        <img src="../img/casa.png">
+        <img src="../assets/img/casa.png">
 
     <a href="tela6.html">
-        <img src="../img/lupa.png">
+        <img src="../assets/img/lupa.png">
 
     <a href="tela11.html">
-        <img src="../img/chat.png">
+        <img src="../assets/img/chat.png">
 
     <a href="tela9.html">
-        <img src="../img/perfil.png">
+        <img src="../assets/img/perfil.png">
 </footer>
 </html>
