--- a/view/menuadm.html
+++ b/view/menuadm.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="top">
-            <img src="../img/tremlogo.png">
+            <img src="../assets/img/tremlogo.png">
             <h1> ADM </h1>
         </div>
     </header>
