--- a/view/tela6.html
+++ b/view/tela6.html
@@ -41,8 +41,8 @@
             <h2>Outros endereços</h2>
             <button class="location-btn">
             <div class="butao">
-                <img src="../img/adicionar.png"> 
-                <a href="../html/enderecos.html">Salve mais endereços</a>
+                <img src="../assets/img/adicionar.png"> 
+                <a href="..enderecos.html">Endereços salvos</a>
             </div>
         </button>
         </div>
@@ -53,16 +53,16 @@
 
 <footer class="rodape">
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
         <a href="tela6.html">
-            <img src="../img/lupa.png">
+            <img src="../assets/img/lupa.png">
 
         <a href="tela11.html">
-            <img src="../img/chat.png">
+            <img src="../assets/img/chat.png">
 
         <a href="tela9.html">
-            <img src="../img/perfil.png">
+            <img src="../assets/img/perfil.png">
     </footer>
 
 </html>
