--- a/view/tela7.html
+++ b/view/tela7.html
@@ -30,7 +30,7 @@
 
 
         <div class="pedidos">
-            <img src="../img/rodinei.jpeg" alt="imagem" />
+            <img src="../assets/img/rodinei.jpeg" alt="imagem" />
 
 
             <div class="usuario">
@@ -69,6 +69,6 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-     <script href="../js/main.js"></script>
+
 </body>
 </html>
