--- a/view/tela8.html
+++ b/view/tela8.html
@@ -25,7 +25,7 @@
                     <h1> Olá, Lucas </h1>
                 </div> <!-- text-oi -->
                 <div class="pfp">
-                    <img src="../img/pfp.jpg">
+                    <img src="../assets/img/pfp.jpg">
                 </div> <!-- pfp -->
             </div>
         </nav>
@@ -36,7 +36,7 @@
                 </span>
             </div> <!-- text-bar -->
             <div class=img-bar>
-                <img src="../img/lupa.png">
+                <img src="../assets/img/lupa.png">
             </div> <!-- img-bar -->
         </div> <!-- searchbar-->
     </header>
@@ -49,7 +49,7 @@
             </div> <!-- ult -atividade -->
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/local.png">
+                    <img src="../assets/img/local.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -63,7 +63,7 @@
             </div> <!-- card-atividade -->
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/local.png">
+                    <img src="../assets/img/local.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -84,7 +84,7 @@
             <div class="servicos-cards">
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="../img/alerta.png">
+                        <img src="../assets/img/alerta.png">
                     </div>
                     <div class="servico-text">
                         <span> Alertas em tempo real </span>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="../img/trem.png">
+                        <img src="../assets/img/trem.png">
                     </div>
                     <div class="servico-text">
                         <span> Status do meu trem </span>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="../img/relogio.png">
+                        <img src="../assets/img/relogio.png">
                     </div>
                     <div class="servico-text">
                         <span> Horários  de  embarque </span>
@@ -111,10 +111,10 @@
     </main>
 
     <footer class="rodape">
-    <a href="tela8.html"><img src="../img/casa.png" alt="Início"></a>
-    <a href="tela6.html"><img src="../img/lupa.png" alt="Buscar"></a>
-    <a href="tela11.html"><img src="../img/chat.png" alt="Chat"></a>
-    <a href="tela9.html"><img src="../img/perfil.png" alt="Perfil"></a>
+    <a href="tela8.html"><img src="../assets/img/casa.png" alt="Início"></a>
+    <a href="tela6.html"><img src="../assets/img/lupa.png" alt="Buscar"></a>
+    <a href="tela11.html"><img src="../assets/img/chat.png" alt="Chat"></a>
+    <a href="tela9.html"><img src="../assets/img/perfil.png" alt="Perfil"></a>
 </footer>
 
 </body>
