--- a/view/tela9.html
+++ b/view/tela9.html
@@ -19,7 +19,7 @@
 <body>
 
     <nav>
-        <img src="../img/pfp.jpg">
+        <img src="../assets/img/pfp.jpg">
         <h3>Lucas</h3>
         <br>
         <div class="info">
@@ -55,16 +55,16 @@
     <footer class="rodape">
 
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
             <a href="tela6.html">
-                <img src="../img/lupa.png">
+                <img src="../assets/img/lupa.png">
 
                 <a href="tela11.html">
-                    <img src="../img/chat.png">
+                    <img src="../assets/img/chat.png">
 
                     <a href="tela9.html">
-                        <img src="../img/perfil.png">
+                        <img src="../assets/img/perfil.png">
 
     </footer>
 </body>
