att img tela 10 - 14

--- a/view/tela10.html
+++ b/view/tela10.html
@@ -21,7 +21,7 @@
 
 
     <nav>
-        <img src="../img/perfil.png">
+        <img src="../assets/img/perfil.png">
         <h3>Informações da Conta</h3>
         <br>
         <div class="info">
@@ -44,16 +44,16 @@
     <footer class="rodape">
 
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
             <a href="tela6.html">
-                <img src="../img/lupa.png">
+                <img src="../assets/img/lupa.png">
 
                 <a href="tela11.html">
-                    <img src="../img/chat.png">
+                    <img src="../assets/img/chat.png">
 
                     <a href="tela9.html">
-                        <img src="../img/perfil.png">
+                        <img src="../assets/img/perfil.png">
 
 
     </footer>
