--- a/view/tela11.html
+++ b/view/tela11.html
@@ -30,7 +30,7 @@
 
 
         <div class="ilustracao">
-            <img src="../img/semconversa.png" alt="Ilustração de mensagens">
+            <img src="../assets/img/semconversa.png" alt="Ilustração de mensagens">
         </div>
 
 
@@ -43,16 +43,16 @@
     <footer class="rodape">
 
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
             <a href="tela6.html">
-                <img src="../img/lupa.png">
+                <img src="../assets/img/lupa.png">
 
                 <a href="tela11.html">
-                    <img src="../img/chat.png">
+                    <img src="../assets/img/chat.png">
 
                     <a href="tela9.html">
-                        <img src="../img/perfil.png">
+                        <img src="../assets/img/perfil.png">
 
 
     </footer>
