--- a/view/tela14.html
+++ b/view/tela14.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="top">
-            <img src="../img/tremlogo.png">
+            <img src="../assets/img/tremlogo.png">
             <h1> Formas de Pagamento </h1>
         </div>
     </header>
@@ -59,16 +59,16 @@
 </body>
 <footer class="rodape">
     <a href="tela8.html">
-        <img src="../img/casa.png">
+        <img src="../assets/img/casa.png">
 
     <a href="tela6.html">
-        <img src="../img/lupa.png">
+        <img src="../assets/img/lupa.png">
 
     <a href="tela11.html">
-        <img src="../img/chat.png">
+        <img src="../assets/img/chat.png">
 
     <a href="tela9.html">
-        <img src="../img/perfil.png">
+        <img src="../assets/img/perfil.png">
 </footer>
 
 
