--- a/view/tela12.html
+++ b/view/tela12.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="top">
-            <img src="../img/tremlogo.png">
+            <img src="../assets/img/tremlogo.png">
             <h1> Ajustes </h1>
         </div>
     </header>
@@ -54,16 +54,16 @@
         
 <footer class="rodape">
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
         <a href="tela6.html">
-            <img src="../img/lupa.png">
+            <img src="../assets/img/lupa.png">
 
         <a href="tela11.html">
-            <img src="../img/chat.png">
+            <img src="../assets/img/chat.png">
 
         <a href="tela9.html">
-            <img src="../img/perfil.png">
+            <img src="../assets/img/perfil.png">
     </footer>
 
 </body>
