--- a/view/tela13.html
+++ b/view/tela13.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="top">
-            <img src="../img/tremlogo.png">
+            <img src="../assets/img/tremlogo.png">
             <h1> Ultimas Atividades </h1>
         </div>
     </header>
@@ -30,7 +30,7 @@
             </div> <!-- ult -atividade -->
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/localizacao.png">
+                    <img src="../assets/img/localizacao.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -45,7 +45,7 @@
 
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/localizacao.png">
+                    <img src="../assets/img/localizacao.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -59,7 +59,7 @@
             </div>
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/localizacao.png">
+                    <img src="../assets/img/localizacao.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -73,7 +73,7 @@
             </div>
             <div class="card-atividade">
                 <div class="card-img">
-                    <img src="../img/localizacao.png">
+                    <img src="../assets/img/localizacao.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -90,16 +90,16 @@
 
     <footer class="rodape">
         <a href="tela8.html">
-            <img src="../img/casa.png">
+            <img src="../assets/img/casa.png">
 
             <a href="tela6.html">
-                <img src="../img/lupa.png">
+                <img src="../assets/img/lupa.png">
 
                 <a href="tela11.html">
-                    <img src="../img/chat.png">
+                    <img src="../assets/img/chat.png">
 
                     <a href="tela9.html">
-                        <img src="../img/perfil.png">
+                        <img src="../assets/img/perfil.png">
     </footer>
 
 </body>
